remove also adunit id and use the .env file

--- a/.env
+++ b/.env
@@ -1,14 +1,30 @@
 [android/test]
 "app_id"="ca-app-pub-3940256099942544~3347511713"
+"banner_id"="ca-app-pub-3940256099942544/6300978111"
+"interstitial_id"="ca-app-pub-3940256099942544/1033173712"
+"rewarded_id"="ca-app-pub-3940256099942544/5224354917"
+"rewarded_interstitial_id"="ca-app-pub-3940256099942544/5354046379"
 
 [android/prod]
 "app_id"=""
+"banner_id"=""
+"interstitial_id"=""
+"rewarded_id"=""
+"rewarded_interstitial_id"=""
 
 [ios/test]
 "app_id"="ca-app-pub-3940256099942544~1458002511"
+"banner_id"="ca-app-pub-3940256099942544/2934735716"
+"interstitial_id"="ca-app-pub-3940256099942544/4411468910"
+"rewarded_id"="ca-app-pub-3940256099942544/1712485313"
+"rewarded_interstitial_id"="ca-app-pub-3940256099942544/6978759866"
 
 [ios/prod]
 "app_id"=""
+"banner_id"=""
+"interstitial_id"=""
+"rewarded_id"=""
+"rewarded_interstitial_id"=""
 
 [ios]
 "att_text"=""
