Replaced static text with tokens.

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -3,8 +3,8 @@
 ;
 [plugin]
 
-name="Admob"
+name="@pluginNodeName@"
 description="Allows displaying of AdMob ads."
 author="Cengiz"
 version="@pluginVersion@"
-script="AdmobPlugin.gd"
+script="@pluginName@.gd"
